--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-imask": "^7.6.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
